@@ -10,6 +10,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Change post thumbnail on pages to full size image and align to the center
 * Change comment fields into an unordered list
 * Change `meta-byline` container from `div` to `h3` (adjusted CSS as needed)
+* Change `meta-tags` container from `p` to `h3` (adjusted CSS as needed)
 
 = CSS =
 * Add styles for comment form fields
